--- a/tree.html
+++ b/tree.html
@@ -11,16 +11,19 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background-color: #f0f0f0; /* Ou uma cor escura se preferir */
+            background-color: #f0f0f0;
         }
         svg {
-            max-width: 90%; /* Ajuste o tamanho para visualização */
+            max-width: 90%;
             height: auto;
-            display: block; /* Remove espaçamentos extras */
+            display: block;
         }
     </style>
 </head>
 <body>
-    <img src="arvore_projetos.svg" alt="Minha Árvore de Competências" />
+    <object data="arvore_projetos.svg" type="image/svg+xml" style="max-width: 90%; height: auto; display: block;">
+        <img src="arvore_projetos.svg" alt="Minha Árvore de Competências" />
+    </object>
+
     </body>
 </html>
