--- a/tree.html
+++ b/tree.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha Árvore de Competências Interativa</title>
+    <link rel="icon" href="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🚀</text></svg>" type="image/svg+xml">
     <style>
         body {
             background-color: #4f4f4f;
@@ -61,7 +62,9 @@
             { path: "path_M159119411828H15899L159364401646H159491L1598654118", label: "Análise Turnover (ML, Previsão)", url: "https://github.com/fabiuniz/turnover" },
             { path: "path_M159077671967V661786H159688V662879H159201V66632H15", label: "Ferramenta IA p/ Vídeos (Fluxos Automatizados)", url: "https://github.com/fabiuniz/yt-transcribe-ai" },
             { path: "path_M154238146943H154109L154483145925H15461L1549841469", label: "Amb. Dev Docker Genérico", url: "https://github.com/fabiuniz/script_docker" },
-            { path: "path_M62039817134V170322H623838C62463717032262529170337", label: "Python (FastAPI - turnover", url: "https://github.com/fabiuniz/turnover" },        
+            { path: "path_M62039817134V170322H623838C62463717032262529170337", label: "Python (FastAPI - turnover", url: "https://github.com/fabiuniz/turnover" },       
+            { path: "path_M22329159334V158316H226731C22752915831622818215833", label: "PostgreSQL, JPA (em projetos Java)", url: "https://github.com/fabiuniz/dslist-rest" },       
+            
         ];        
 
         function assignIdsAndLinksToSvgElements() {
