--- a/tree.html
+++ b/tree.html
@@ -20,8 +20,8 @@
 
         object {
             width: 100%;
-            height: 100%;
-            max-width: 1600px;
+            height: auto;
+            max-width: 100%;
             max-height: 1200px;
             display: block;
             margin: 0 auto;
