--- a/tree.html
+++ b/tree.html
@@ -69,22 +69,23 @@
         //path_M600312155165V154001H607289V154126H601721V15452H60 frontend
         //path_M203205154498V153334H207273C2080841533342087521533 Banco de dados
     const linksDataFigma = [
-        { path: "path_M677253985872V974235H691343V984622H745434V985872H6", label: "Python (Amb. Dev Docker)", url: "https://github.com/fabiuniz/script_docker" },
-        { path: "path_M19301695906C19294269533192666694883192181694565C1", label: "PHP (Portfólio Geral)", url: "https://github.com/fabiuniz" },
-        { path: "path_M677253985872V974235H691343V984622H745434V985872H6", label: "Java (bank_system)", url: "https://github.com/fabiuniz/bank_system" },
-        { path: "path_M682025112132H667253L70998110968H724525L7672531121", label: "APIs e Integrações (dslist-rest)", url: "https://github.com/fabiuniz/dslist-rest" },
-        { path: "path_M600312155165V154001H607289V154126H601721V15452H60", label: "Jogo JS (JavaScript)", url: "https://github.com/fabiuniz/game_javascript" },
-        { path: "path_M160861990036V100167H16072V990036H160861ZM16125999", label: "Ferramenta IA p/ Vídeos (Dash)", url: "https://github.com/fabiuniz/yt-transcribe-ai" },    
-        { path: "path_M16072111507V110343H160861V110861H161481V110343H16", label: "MIDI Controller (USB)", url: "https://github.com/fabiuniz/Midi_Arduino" },
-        { path: "path_M157097383479H15695L157377371842H157522L1579538347", label: "Análise Turnover (Python, Gráficos)", url: "https://github.com/fabiuniz/turnover" },
-        { path: "path_M15705485237H157218L157613494896H157627L1580224852", label: "Ferramenta IA p/ Vídeos (Whisper, Gemini API)", url: "https://github.com/fabiuniz/yt-transcribe-ai" },
-        { path: "path_M15705485237H157218L157613494896H157627L1580224852", label: "Análise Turnover (ML, Previsão)", url: "https://github.com/fabiuniz/turnover" },
-        { path: "path_M157097643618H15695L157377631982H157522L1579564361", label: "Ferramenta IA p/ Vídeos (Fluxos Automatizados)", url: "https://github.com/fabiuniz/yt-transcribe-ai" },
-        { path: "path_M153024141307H152883C15287514126615286141231152841", label: "Amb. Dev Docker Genérico", url: "https://github.com/fabiuniz/script_docker" },
-        { path: "path_M600312166504V165341H60438C60519116534160585916535", label: "Python (FastAPI - turnover", url: "https://github.com/fabiuniz/turnover" },      
-        { path: "path_M203205154498V153334H207273C2080841533342087521533", label: "PostgreSQL, JPA (em projetos Java)", url: "https://github.com/fabiuniz/dslist-rest" },      
-    ];        
-
+        { path: "path_M15705485237H157218L157613494896H157627L1580224852", label: "Análise Turnover (ML, Previsão)", url: "https://github.com/fabiuniz/turnover" ,description:"Sem descrição"},
+        { path: "path_M677253985872V974235H691343V984622H745434V985872H6", label: "Python (Amb. Dev Docker)", url: "https://github.com/fabiuniz/script_docker" ,description:"Sem descrição"},
+        { path: "path_M677253985872V974235H691343V984622H745434V985872H6", label: "Java (bank_system)", url: "https://github.com/fabiuniz/bank_system" ,description:"Sem descrição"},
+        { path: "path_M19301695906C19294269533192666694883192181694565C1", label: "PHP (Portfólio Geral)", url: "https://github.com/fabiuniz" ,description:"Sem descrição"},
+        { path: "path_M682025112132H667253L70998110968H724525L7672531121", label: "APIs e Integrações (dslist-rest)", url: "https://github.com/fabiuniz/dslist-rest" ,description:"Sem descrição"},
+        { path: "path_M600312155165V154001H607289V154126H601721V15452H60", label: "Jogo JS (JavaScript)", url: "https://github.com/fabiuniz/game_javascript" ,description:"Sem descrição"},
+        { path: "path_M160861990036V100167H16072V990036H160861ZM16125999", label: "Ferramenta IA p/ Vídeos (Dash)", url: "https://github.com/fabiuniz/yt-transcribe-ai" ,description:"Sem descrição"},
+        { path: "path_M16072111507V110343H160861V110861H161481V110343H16", label: "MIDI Controller (USB)", url: "https://github.com/fabiuniz/Midi_Arduino" ,description:"Sem descrição"},
+        { path: "path_M157097383479H15695L157377371842H157522L1579538347", label: "Análise Turnover (Python, Gráficos)", url: "https://github.com/fabiuniz/turnover" ,description:"Sem descrição"},
+        { path: "path_M15705485237H157218L157613494896H157627L1580224852", label: "Ferramenta IA p/ Vídeos (Whisper, Gemini API)", url: "https://github.com/fabiuniz/yt-transcribe-ai" ,description:"Sem descrição"},
+        { path: "path_M157097643618H15695L157377631982H157522L1579564361", label: "Ferramenta IA p/ Vídeos (Fluxos Automatizados)", url: "https://github.com/fabiuniz/yt-transcribe-ai" ,description:"Sem descrição"},
+        { path: "path_M153024141307H152883C15287514126615286141231152841", label: "Amb. Dev Docker Genérico", url: "https://github.com/fabiuniz/script_docker" ,description:"Sem descrição"},
+        { path: "path_M600312166504V165341H60438C60519116534160585916535", label: "Python (FastAPI - turnover", url: "https://github.com/fabiuniz/turnover" ,description:"Sem descrição"},
+        { path: "path_M203205154498V153334H207273C2080841533342087521533", label: "PostgreSQL, JPA (em projetos Java)", url: "https://github.com/fabiuniz/dslist-rest" ,description:"Sem descrição"},
+        { path: "path_M203205154498V153334H207273C2080841533342087521533", label: "APIs e Integrações (dslist-rest)", url: "https://github.com/fabiuniz/dslist-rest" ,description:"Sem descrição" },   
+        
+    ];  
     function assignIdsAndLinksToSvgElements() {
         const svgObject = document.getElementById('mySvgObject');
         svgObject.addEventListener('load', function() {
@@ -121,9 +122,9 @@
                     display: block; /* Garante que o span ocupe toda a largura disponível */
                     /*text-align: center;*/
                     /*margin-top: 5px; /* Espaçamento entre o SVG e o link */
-                    font-size: 16px;
+                    font-size: 17px;
                     color: #007bff;
-                    font-family: Cursive;
+                    font-family: Inter;
                     text-decoration: underline;
                 }
                 .link-span:hover {
@@ -228,6 +229,7 @@
 
                 const span = document.createElement('span');
                 span.textContent = link.label;
+                span.title = link.description;
                 span.className = 'link-span';
                 span.addEventListener('click', () => {
                     window.open(link.url, '_blank');
