--- a/tree.html
+++ b/tree.html
@@ -68,22 +68,25 @@
         //path_M600312166504V165341H60438C60519116534160585916535 backend
         //path_M600312155165V154001H607289V154126H601721V15452H60 frontend
         //path_M203205154498V153334H207273C2080841533342087521533 Banco de dados
+        //path_M677253123645V122481H691343V12352H745434V123645H67 Logica
     const linksDataFigma = [
-        { hook: "DadosIA",path: "path_M157097383479H15695L157377371842H157522L1579538347", label: "Análise Turnover (Python, ML)", url: "https://github.com/fabiuniz/turnover" ,description:"Sem descrição"},
-        { hook: "DadosIA",path: "path_M15705485237H157218L157613494896H157627L1580224852", label: "Análise Turnover (ML, Previsão)", url: "https://github.com/fabiuniz/turnover" ,description:"Sem descrição"},
-        { hook: "DadosIA",path: "path_M15705485237H157218L157613494896H157627L1580224852", label: "Ferramenta IA p/ Vídeos (Whisper, Gemini API)", url: "https://github.com/fabiuniz/yt-transcribe-ai" ,description:"Sem descrição"},
-        { hook: "DadosIA",path: "path_M157097643618H15695L157377631982H157522L1579564361", label: "Ferramenta IA p/ Vídeos (Fluxos Automatizados)", url: "https://github.com/fabiuniz/yt-transcribe-ai" ,description:"Sem descrição"},
-        { hook: "IoT",path: "path_M160861990036V100167H16072V990036H160861ZM16125999", label: "Ferramenta IA p/ Vídeos (Dash)", url: "https://github.com/fabiuniz/yt-transcribe-ai" ,description:"Sem descrição"},
-        { hook: "IoT",path: "path_M16072111507V110343H160861V110861H161481V110343H16", label: "MIDI Controller (USB)", url: "https://github.com/fabiuniz/Midi_Arduino" ,description:"Sem descrição"},
-        { hook: "DevOps",path: "path_M153024141307H152883C15287514126615286141231152841", label: "Amb. Dev Docker Genérico", url: "https://github.com/fabiuniz/script_docker" ,description:"Sem descrição"},
-        { hook: "Dev",path: "path_M600312166504V165341H60438C60519116534160585916535", label: "Python (FastAPI - turnover", url: "https://github.com/fabiuniz/turnover" ,description:"Sem descrição"},
-        { hook: "Dev",path: "path_M600312155165V154001H607289V154126H601721V15452H60", label: "Jogo JS (JavaScript)", url: "https://github.com/fabiuniz/game_javascript" ,description:"Sem descrição"},
-        { hook: "Dev",path: "path_M682025112132H667253L70998110968H724525L7672531121", label: "APIs e Integrações (dslist-rest)", url: "https://github.com/fabiuniz/dslist-rest" ,description:"Sem descrição"},
-        { hook: "Dev",path: "path_M203205154498V153334H207273C2080841533342087521533", label: "PostgreSQL, JPA (em projetos Java)", url: "https://github.com/fabiuniz/dslist-rest" ,description:"Sem descrição"},
-        { hook: "Fund",path: "path_M203205154498V153334H207273C2080841533342087521533", label: "APIs e Integrações (dslist-rest)", url: "https://github.com/fabiuniz/dslist-rest" ,description:"Sem descrição" },   
-        { hook: "Fund",path: "path_M677253985872V974235H691343V984622H745434V985872H6", label: "Java (bank_system)", url: "https://github.com/fabiuniz/bank_system" ,description:"Sem descrição"},
-        { hook: "Fund", path:"path_M677253985872V974235H691343V984622H745434V985872H6", label: "Python (Amb. Dev Docker)", url: "https://github.com/fabiuniz/script_docker" ,description:"Sem descrição"},
-        { hook: "Skils",path: "path_M19301695906C19294269533192666694883192181694565C1", label: "PHP (Portfólio Geral)", url: "https://github.com/fabiuniz" ,description:"Sem descrição"},
+        { hook: "DadosIA",path: "path_M157097383479H15695L157377371842H157522L1579538347", label: "Análise Turnover (Python, ML)", url: "https://github.com/fabiuniz/turnover" ,description:"Projeto para transcrever vídeos do YouTube e realizar análise de sentimento usando FastAPI e IA."},
+        { hook: "DadosIA",path: "path_M15705485237H157218L157613494896H157627L1580224852", label: "Análise Turnover (ML, Previsão)", url: "https://github.com/fabiuniz/turnover" ,description:"Projeto que utiliza FastAPI e TensorFlow para prever o turnover de funcionários, com API robusta e modular."},
+        { hook: "DadosIA",path: "path_M15705485237H157218L157613494896H157627L1580224852", label: "Ferramenta IA p/ Vídeos (Whisper, Gemini API)", url: "https://github.com/fabiuniz/yt-transcribe-ai" ,description:"Projeto para transcrever vídeos do YouTube e realizar análise de sentimento usando FastAPI e IA."},
+        { hook: "DadosIA",path: "path_M157097643618H15695L157377631982H157522L1579564361", label: "Ferramenta IA p/ Vídeos (Fluxos Automatizados)", url: "https://github.com/fabiuniz/yt-transcribe-ai" ,description:"Projeto para transcrever vídeos do YouTube e realizar análise de sentimento usando FastAPI e IA."},
+        { hook: "IoT",path: "path_M160861990036V100167H16072V990036H160861ZM16125999", label: "Ferramenta IA p/ Vídeos (Dash)", url: "https://github.com/fabiuniz/yt-transcribe-ai" ,description:"Projeto para transcrever vídeos do YouTube e realizar análise de sentimento usando FastAPI e IA."},
+        { hook: "IoT",path: "path_M16072111507V110343H160861V110861H161481V110343H16", label: "MIDI Controller (USB)", url: "https://github.com/fabiuniz/Midi_Arduino" ,description:"Projeto de um controlador MIDI baseado em Arduino."},
+        { hook: "DevOps",path: "path_M153024141307H152883C15287514126615286141231152841", label: "Amb. Dev Docker Genérico", url: "https://github.com/fabiuniz/script_docker" ,description:"Configuração de ambiente de desenvolvimento utilizando Docker Compose."},
+        { hook: "Dev",path: "path_M600312166504V165341H60438C60519116534160585916535", label: "Python (FastAPI - turnover", url: "https://github.com/fabiuniz/turnover" ,description:"Projeto que utiliza FastAPI e TensorFlow para prever o turnover de funcionários, com API robusta e modular."},
+        { hook: "Dev",path: "path_M600312155165V154001H607289V154126H601721V15452H60", label: "Jogo JS (JavaScript)", url: "https://github.com/fabiuniz/game_javascript" ,description:"Projeto de jogo baseado em JavaScript."},
+        { hook: "Dev",path: "path_M682025112132H667253L70998110968H724525L7672531121", label: "APIs e Integrações (dslist-rest)", url: "https://github.com/fabiuniz/dslist-rest" ,description:"Projeto Java Spring"},
+        { hook: "Dev",path: "path_M677253985872V974235H691343V984622H745434V985872H6", label: "Flutter Mobile", url: "https://github.com/fabiuniz/apptast" ,description:"TechTaste - Aplicativo de Restaurantes"},
+        { hook: "Dev",path: "path_M203205154498V153334H207273C2080841533342087521533", label: "PostgreSQL, JPA (em projetos Java)", url: "https://github.com/fabiuniz/dslist-rest" ,description:"Projeto Java Spring"},        
+        { hook: "Fund",path: "path_M203205154498V153334H207273C2080841533342087521533", label: "APIs e Integrações (dslist-rest)", url: "https://github.com/fabiuniz/dslist-rest" ,description:"Projeto Java Spring" },   
+        { hook: "Fund",path: "path_M677253985872V974235H691343V984622H745434V985872H6", label: "Java (dslist-rest)", url: "https://github.com/fabiuniz/dslist-rest" ,description:"Projeto Java Spring"},
+        { hook: "Fund", path:"path_M677253985872V974235H691343V984622H745434V985872H6", label: "Python (Amb. Dev Docker)", url: "https://github.com/fabiuniz/script_docker" ,description:"Extrutura base para aplicação python"},
+        { hook: "Fund", path:"path_M677253123645V122481H691343V12352H745434V123645H67", label: "Reengenharia de Funções", url: "https://github.com/fabiuniz/appdla" ,description:"Desafio 21 Dias de Código Fonte TV"},
+        { hook: "Skils",path: "path_M19301695906C19294269533192666694883192181694565C1", label: "PHP (Portfólio Geral)", url: "https://github.com/fabiuniz" ,description:"Portifolio"},
     ];  
         function assignIdsAndLinksToSvgElements() {
         const svgObject = document.getElementById('mySvgObject');
