--- a/tree.html
+++ b/tree.html
@@ -71,6 +71,7 @@
         //path_M677253123645V122481H691343V12352H745434V123645H67 Logica
     const linksDataFigma = [
         { hook: "DadosIA",path: "path_M157097383479H15695L157377371842H157522L1579538347", label: "Análise Turnover (Python, ML)", url: "https://github.com/fabiuniz/turnover" ,description:"Projeto para transcrever vídeos do YouTube e realizar análise de sentimento usando FastAPI e IA."},
+        { hook: "DadosIA",path: "path_M157097383479H15695L157377371842H157522L1579538347", label: "Dashboard Empresarial - Projeto Power BI", url: "https://github.com/fabiuniz/py_powerbi" ,description:" Dashboard Geral da Empresa utilizando Python, Dash e Plotly, com integração via Docker"},        
         { hook: "DadosIA",path: "path_M15705485237H157218L157613494896H157627L1580224852", label: "Análise Turnover (ML, Previsão)", url: "https://github.com/fabiuniz/turnover" ,description:"Projeto que utiliza FastAPI e TensorFlow para prever o turnover de funcionários, com API robusta e modular."},
         { hook: "DadosIA",path: "path_M15705485237H157218L157613494896H157627L1580224852", label: "Ferramenta IA p/ Vídeos (Whisper, Gemini API)", url: "https://github.com/fabiuniz/yt-transcribe-ai" ,description:"Projeto para transcrever vídeos do YouTube e realizar análise de sentimento usando FastAPI e IA."},
         { hook: "DadosIA",path: "path_M157097643618H15695L157377631982H157522L1579564361", label: "Ferramenta IA p/ Vídeos (Fluxos Automatizados)", url: "https://github.com/fabiuniz/yt-transcribe-ai" ,description:"Projeto para transcrever vídeos do YouTube e realizar análise de sentimento usando FastAPI e IA."},
@@ -86,6 +87,7 @@
         { hook: "Fund",path: "path_M677253985872V974235H691343V984622H745434V985872H6", label: "Java (dslist-rest)", url: "https://github.com/fabiuniz/dslist-rest" ,description:"Projeto Java Spring"},
         { hook: "Fund", path:"path_M677253985872V974235H691343V984622H745434V985872H6", label: "Python (Amb. Dev Docker)", url: "https://github.com/fabiuniz/script_docker" ,description:"Extrutura base para aplicação python"},
         { hook: "Fund", path:"path_M677253123645V122481H691343V12352H745434V123645H67", label: "Reengenharia de Funções", url: "https://github.com/fabiuniz/appdla" ,description:"Desafio 21 Dias de Código Fonte TV"},
+        { hook: "Fund", path:"path_M677253123645V122481H691343V12352H745434V123645H67", label: "Gerenciamento de Estudos", url: "https://github.com/fabiuniz/StudyFlow" ,description:"Seu Assistente de Estudos Tecnológicos"},        
         { hook: "Skils",path: "path_M19301695906C19294269533192666694883192181694565C1", label: "PHP (Portfólio Geral)", url: "https://github.com/fabiuniz" ,description:"Portifolio"},
     ];  
         function assignIdsAndLinksToSvgElements() {
