--- a/tree.html
+++ b/tree.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha Árvore de Competências Interativa</title>
     <link rel="icon" href="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🚀</text></svg>" type="image/svg+xml">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <style>
         body {
             background-color: #4f4f4f;
@@ -127,7 +128,7 @@
                     /*text-align: center;*/
                     /*margin-top: 5px; /* Espaçamento entre o SVG e o link */
                     font-size: 17px;
-                    color: #007bff;
+                    color: white;
                     font-family: Inter;
                     text-decoration: underline;
                 }
