--- a/tree.html
+++ b/tree.html
@@ -58,36 +58,35 @@
         //path_M112764171433C112757171376112729171331112681171299 SRE                        
         
     const hookfigma ={
-        hook1 : "path_M157097383479H15695L157377371842H157522L1579538347", //analise de dados
-        hook2 : "path_M15705485237H157218L157613494896H157627L1580224852", //machine elairne
-        hook3 : "path_M157097643618H15695L157377631982H157522L1579564361", //automação
-        hook4 : "path_M160861990036V100167H16072V990036H160861ZM16125999", //internet das coisas
-        hook5 : "path_M16072111507V110343H160861V110861H161481V110343H16", //Hardware e eletronica
-        hook6 : "path_M153024141307H152883C15287514126615286141231152841", //containers
-        hook7 : "path_M600312166504V165341H60438C60519116534160585916535", //backend
-        hook8 : "path_M600312155165V154001H607289V154126H601721V15452H60", //frontend
-        hook9 : "path_M682025112132H667253L70998110968H724525L7672531121", //arquitetura de software        
-        hook10 : "path_M677253985872V974235H691343V984622H745434V985872H6", //linguagens
-        hook11 : "path_M203205154498V153334H207273C2080841533342087521533", //Banco de dados
-        hook12 : "path_M677253123645V122481H691343V12352H745434V123645H67", //logica e extrutura de dados
-        hook13 : "path_M19301695906C19294269533192666694883192181694565C1" //skils
+        hook1 : "path_M157097383479H15695L157377371842H157522L1579538347", //DadosIA --> analise de dados 
+        hook2 : "path_M15705485237H157218L157613494896H157627L1580224852", //DadosIA --> machine elairne 
+        hook3 : "path_M157097643618H15695L157377631982H157522L1579564361", //DadosIA --> automação
+        hook4 : "path_M160861990036V100167H16072V990036H160861ZM16125999", //IoT     --> internet das coisas
+        hook5 : "path_M16072111507V110343H160861V110861H161481V110343H16", //IoT     --> Hardware e eletronica
+        hook6 : "path_M153024141307H152883C15287514126615286141231152841", //DevOps  --> containers
+        hook7 : "path_M600312166504V165341H60438C60519116534160585916535", //Dev     --> backend
+        hook8 : "path_M600312155165V154001H607289V154126H601721V15452H60", //Dev     --> frontend
+        hook9 : "path_M682025112132H667253L70998110968H724525L7672531121", //Fund     --> arquitetura de software        
+        hook10 : "path_M677253985872V974235H691343V984622H745434V985872H6", //Fund    -->linguagens
+        hook11 : "path_M203205154498V153334H207273C2080841533342087521533", //Dev    -->Banco de dados
+        hook12 : "path_M677253123645V122481H691343V12352H745434V123645H67", //Fund   -->logica e extrutura de dados
+        hook13 : "path_M19301695906C19294269533192666694883192181694565C1" //Skils   -->skils
     };
     const github = "https://github.com/fabiuniz";
     const linksDataFigma = [
-        { hook: "DadosIA", path: hookfigma.hook1, label: "Análise Turnover (Python, ML)", url: github+"/turnover" ,description: "Projeto para transcrever vídeos do YouTube e realizar análise de sentimento usando FastAPI e IA.", nmmd:"path_readme"},
+        { hook: "DadosIA", path: hookfigma.hook1, label: "Análise Turnover (Python, ML)", url: github+"/turnover" ,description: "Previsão de Turnover de Funcionários com FastAPI e TensorFlow", nmmd:"path_readme"},
         { hook: "DadosIA", path: hookfigma.hook1, label: "Dashboard Empresarial - Projeto Power BI", url: github+"/py_powerbi" ,description: " Dashboard Geral da Empresa utilizando Python, Dash e Plotly, com integração via Docker", nmmd:"path_readme" }, 
-        { hook: "DadosIA", path: hookfigma.hook2, label: "Análise Turnover (ML, Previsão)", url: github+"/turnover" ,description: "Projeto para transcrever vídeos do YouTube e realizar análise de sentimento usando FastAPI e IA.", nmmd:"path_readme"},
+        { hook: "DadosIA", path: hookfigma.hook2, label: "Análise Turnover (ML, Previsão)", url: github+"/turnover" ,description: "Previsão de Turnover de Funcionários com FastAPI e TensorFlow", nmmd:"path_readme"},
         { hook: "DadosIA", path: hookfigma.hook2, label: "Ferramenta IA p/ Vídeos (Whisper, Gemini API)", url: github+"/yt-transcribe-ai" ,description: "Projeto para transcrever vídeos do YouTube e realizar análise de sentimento usando FastAPI e IA.", nmmd:"path_readme"},
         { hook: "DadosIA", path: hookfigma.hook3, label: "Ferramenta IA p/ Vídeos (Fluxos Automatizados)", url: github+"/yt-transcribe-ai" ,description: "Projeto para transcrever vídeos do YouTube e realizar análise de sentimento usando FastAPI e IA.", nmmd:"path_readme"},
-        { hook: "IoT", path: hookfigma.hook4, label: "Ferramenta IA p/ Vídeos (Dash)", url: github+"/yt-transcribe-ai" ,description: "Projeto para transcrever vídeos do YouTube e realizar análise de sentimento usando FastAPI e IA.", nmmd:"path_readme"},
+        { hook: "IoT", path: hookfigma.hook4, label: "MIDI Controller (USB)", url: github+"/Midi_Arduino" ,description: "Projeto de um controlador MIDI baseado em Arduino.", nmmd:"path_readme"},
         { hook: "IoT", path: hookfigma.hook5, label: "MIDI Controller (USB)", url: github+"/Midi_Arduino" ,description: "Projeto de um controlador MIDI baseado em Arduino.", nmmd:"path_readme"},
         { hook: "DevOps", path: hookfigma.hook6, label: "Amb. Dev Docker Genérico", url: github+"/script_docker" ,description: "Configuração de ambiente de desenvolvimento utilizando Docker Compose.", nmmd:"path_readme"},
-        { hook: "Dev", path: hookfigma.hook7, label: "Python (FastAPI - turnover", url: github+"/turnover" ,description: "Projeto para transcrever vídeos do YouTube e realizar análise de sentimento usando FastAPI e IA.", nmmd:"path_readme"},
+        { hook: "Dev", path: hookfigma.hook7, label: "PostgreSQL, JPA (em projetos Java)", url: github+"/dslist-rest" ,description: "Projeto Java Spring", nmmd:"path_readme"},
         { hook: "Dev", path: hookfigma.hook8, label: "Jogo JS (JavaScript)", url: github+"/game_javascript" ,description: "Projeto de jogo baseado em JavaScript.", nmmd:"path_readme"},
-        { hook: "Dev", path: hookfigma.hook9, label: "APIs e Integrações (dslist-rest)", url: github+"/dslist-rest" ,description: "Projeto Java Spring", nmmd:"path_readme"},
-        { hook: "Dev", path: hookfigma.hook10, label: "Flutter Mobile", url: github+"/apptast" ,description: "TechTaste - Aplicativo de Restaurantes", nmmd:"path_readme"},
-        { hook: "Dev", path: hookfigma.hook11, label: "PostgreSQL, JPA (em projetos Java)", url: github+"/dslist-rest" ,description: "Projeto Java Spring", nmmd:"path_readme"},
-        { hook: "Fund", path: hookfigma.hook11, label: "APIs e Integrações (dslist-rest)", url: github+"/dslist-rest" ,description: "Projeto Java Spring", nmmd:"path_readme"}, 
+        { hook: "Dev", path: hookfigma.hook11, label: "PostgreSQL, JPA (em projetos Java)", url: github+"/dslist-rest" ,description: "Projeto Java Spring", nmmd:"path_readme"},        
+        { hook: "Fund", path: hookfigma.hook9, label: "APIs e Integrações (dslist-rest)", url: github+"/dslist-rest" ,description: "Projeto Java Spring", nmmd:"path_readme"},
+        { hook: "Fund", path: hookfigma.hook10, label: "Flutter Mobile", url: github+"/apptast" ,description: "TechTaste - Aplicativo de Restaurantes", nmmd:"path_readme"},
         { hook: "Fund", path: hookfigma.hook10, label: "Java (dslist-rest)", url: github+"/dslist-rest" ,description: "Projeto Java Spring", nmmd:"path_readme"},
         { hook: "Fund", path:hookfigma.hook10, label: "Python (Amb. Dev Docker)", url: github+"/script_docker" ,description: "Extrutura base para aplicação python", nmmd:"path_readme"},
         { hook: "Fund", path:hookfigma.hook12, label: "Reengenharia de Funções", url: github+"/appdla" ,description: "Desafio 21 Dias de Código Fonte TV", nmmd:"path_readme"},
