--- a/tree.html
+++ b/tree.html
@@ -134,8 +134,9 @@
                     /*margin-top: 5px; /* Espaçamento entre o SVG e o link */
                     font-size: 14px;
                     color: black;
-                    font-family: 'Roboto Light', 'Roboto', sans-serif; /* Tente 'Roboto Light' primeiro, depois 'Roboto', e depois qualquer sans-serif */
+                    font-family: 'Roboto Light', 'Roboto', sans-serif; 
                     text-decoration: underline;
+                    white-space: nowrap;
                 }
                 .link-span:hover {
                     color: yellow;
