--- a/tree.html
+++ b/tree.html
@@ -53,7 +53,7 @@
 <body>
     <object id="mySvgObject" data="arvore_projetos.svg" type="image/svg+xml"></object>
     <script>        
-        //path_M188056579603V591239H186647V579603H188056ZM1920458 ingles        
+        //path_M110056547603V559239H108647V547603H110056ZM1140455 ingles        
         //path_M11306414149H112923C112915141449112914141411287914 ci/cd
         //path_M112268152466V153629H112127V152466H112268ZM1126671 infra iac
         //path_M113064162168H112923C11291516212711291620921128791 Cloud compu
@@ -61,21 +61,22 @@
         
     const hookfigma ={
         hook0 : "path_00000000000000000000000000000000000000000000000000", //vazio
-        hook1 : "path_M157097389142H15695L157377377505H157522L1579538914", //DadosIA --> analise de dados 
-        hook2 : "path_M15705529005H157218L157613538664H157627L1580225290", //DadosIA --> machine elairne 
-        hook3 : "path_M157097715593H15695L157377703957H157522L1579571559", //DadosIA --> automação
-        hook4 : "path_M160861965036V976673H16072V965036H160861ZM16125997", //IoT     --> internet das coisas
-        hook5 : "path_M16072113907V112743H160861V113261H161481V112743H16", //IoT     --> Hardware e eletronica
-        hook6 : "path_M153024143178H152883C15287514313715286143102152841", //DevOps  --> containers
-        hook7 : "path_M600312166504V165341H60438C60519116534160585916535", //Dev     --> backend
-        hook8 : "path_M600312155165V154001H607289V154126H601721V15452H60", //Dev     --> frontend
-        hook9 : "path_M682025112132H667253L70998110968H724525L7672531121", //Fund     --> arquitetura de software        
-        hook10 : "path_M677253985872V974235H691343V984622H745434V985872H6", //Fund    -->linguagens
+        hook1 : "path_M158097334742H15795L158377323105H158522L1589533474", //DadosIA --> analise de dados 
+        hook2 : "path_M15805531005H158218L158613540664H158627L1590225310", //DadosIA --> machine elairne 
+        hook3 : "path_M158097702999H15795L158377691363H158522L1589570299", //DadosIA --> automação
+        hook4 : "path_M167161943381V955017H16702V943381H167161ZM16755994", //IoT     --> internet das coisas
+        hook5 : "path_M16702113511V112347H167161V112865H167781V112347H16", //IoT     --> Hardware e eletronica
+        hook6 : "path_M153024141478H152883C15287514143715286141402152841", //DevOps  --> containers
+        hook7 : "path_M600312172618V171454H60438C60519117145460585917146", //Dev     --> backend
+        hook8 : "path_M600312155061V153898H607289V154023H601721V154416H6", //Dev     --> frontend
+        hook9 : "path_M352025100132H337253L37998989681H394525L4372531001", //Fund     --> arquitetura de software        
+        hook10 : "path_M347253865872V854235H361343V864622H415434V865872H3", //Fund    -->linguagens
         hook11 : "path_M203205154498V153334H207273C2080841533342087521533", //Dev    -->Banco de dados
-        hook12 : "path_M677253123645V122481H691343V12352H745434V123645H67", //Fund   -->logica e extrutura de dados
-        hook13 : "path_M19301695906C19294269533192666694883192181694565C1", //Skils   -->skils
+        hook12 : "path_M347253112517V111354H361343V112392H415434V112517H3", //Fund   -->logica e extrutura de dados
+        hook13 : "path_M11501664591C11494266401511466666356811418166325C1", //Skils   -->skils
         hook14 : "path_M203205165334H204887L2088411663H208978L21293216533", //Monolíto   -->Monolíto
-        hook15 : "path_M345577370333V358696H352555V359946H346986V363878H3"// Seguranca --> fund
+        hook15 : "path_M345577370333V358696H352555V359946H346986V363878H3",// Seguranca --> fund
+        hook16 : "path_M203205177134H204887L2088411781H208978L21293217713" // Dev -->    Mobile
     };
     const github = "https://github.com/fabiuniz";
     const linksDataFigma = [
