--- a/tree.html
+++ b/tree.html
@@ -80,25 +80,28 @@
     };
     const github = "https://github.com/fabiuniz";
     const linksDataFigma = [
-        { hook: "DadosIA", path: hookfigma.hook1, label: "Análise Turnover (Python, ML)", url: github+"/turnover" ,description: "Previsão de Turnover de Funcionários com FastAPI e TensorFlow", nmmd:"path_readme"},
-        { hook: "DadosIA", path: hookfigma.hook1, label: "Dashboard Empresarial - Projeto Power BI", url: github+"/py_powerbi" ,description: " Dashboard Geral da Empresa utilizando Python, Dash e Plotly, com integração via Docker", nmmd:"path_readme" }, 
-        { hook: "DadosIA", path: hookfigma.hook2, label: "Análise Turnover (ML, Previsão)", url: github+"/turnover" ,description: "Previsão de Turnover de Funcionários com FastAPI e TensorFlow", nmmd:"path_readme"},
-        { hook: "DadosIA", path: hookfigma.hook2, label: "Ferramenta IA p/ Vídeos (Whisper, Gemini API)", url: github+"/yt-transcribe-ai" ,description: "Projeto para transcrever vídeos do YouTube e realizar análise de sentimento usando FastAPI e IA.", nmmd:"path_readme"},
-        { hook: "DadosIA", path: hookfigma.hook3, label: "Ferramenta IA p/ Vídeos (Fluxos Automatizados)", url: github+"/yt-transcribe-ai" ,description: "Projeto para transcrever vídeos do YouTube e realizar análise de sentimento usando FastAPI e IA.", nmmd:"path_readme"},
-        { hook: "IoT", path: hookfigma.hook4, label: "MIDI Controller (USB)", url: github+"/Midi_Arduino" ,description: "Projeto de um controlador MIDI baseado em Arduino.", nmmd:"path_readme"},
-        { hook: "IoT", path: hookfigma.hook5, label: "MIDI Controller (USB)", url: github+"/Midi_Arduino" ,description: "Projeto de um controlador MIDI baseado em Arduino.", nmmd:"path_readme"},
-        { hook: "DevOps", path: hookfigma.hook6, label: "Amb. Dev Docker Genérico", url: github+"/script_docker" ,description: "Configuração de ambiente de desenvolvimento utilizando Docker Compose.", nmmd:"path_readme"},
-        { hook: "Dev", path: hookfigma.hook7, label: "PostgreSQL, JPA (em projetos Java)", url: github+"/dslist-rest" ,description: "Projeto Java Spring", nmmd:"path_readme"},
-        { hook: "Dev", path: hookfigma.hook8, label: "Jogo JS (JavaScript)", url: github+"/game_javascript" ,description: "Projeto de jogo baseado em JavaScript.", nmmd:"path_readme"},
-        { hook: "Dev", path: hookfigma.hook11, label: "PostgreSQL, JPA (em projetos Java)", url: github+"/dslist-rest" ,description: "Projeto Java Spring", nmmd:"path_readme"},        
-        { hook: "Fund", path: hookfigma.hook9, label: "APIs e Integrações (dslist-rest)", url: github+"/dslist-rest" ,description: "Projeto Java Spring", nmmd:"path_readme"},
+        { hook: "DadosIA", path: hookfigma.hook2, label: "📈 Análise Turnover (Python, ML)", url: github+"/turnover" ,description: "Previsão de Turnover de Funcionários com FastAPI e TensorFlow", nmmd:"path_readme"},
+        { hook: "DadosIA", path: hookfigma.hook2, label: "🔗 Dashboard Empresarial - Projeto Power BI", url: github+"/py_powerbi" ,description: " Dashboard Geral da Empresa utilizando Python, Dash e Plotly, com integração via Docker", nmmd:"path_readme" }, 
+        { hook: "DadosIA", path: hookfigma.hook2, label: "📈 Análise Turnover (ML, Previsão)", url: github+"/turnover" ,description: "Previsão de Turnover de Funcionários com FastAPI e TensorFlow", nmmd:"path_readme"},
+        { hook: "DadosIA", path: hookfigma.hook1, label: "🧠 Ferramenta IA p/ Vídeos (Whisper, Gemini API)", url: github+"/yt-transcribe-ai" ,description: "Projeto para transcrever vídeos do YouTube e realizar análise de sentimento usando FastAPI e IA.", nmmd:"path_readme"},
+        { hook: "DadosIA", path: hookfigma.hook3, label: "🧠 Ferramenta IA p/ Vídeos (Fluxos Automatizados)", url: github+"/yt-transcribe-ai" ,description: "Projeto para transcrever vídeos do YouTube e realizar análise de sentimento usando FastAPI e IA.", nmmd:"path_readme"},
+        { hook: "IoT", path: hookfigma.hook4, label: "🎹 MIDI Controller (USB)", url: github+"/Midi_Arduino" ,description: "Projeto de um controlador MIDI baseado em Arduino.", nmmd:"path_readme"},
+        { hook: "IoT", path: hookfigma.hook5, label: "🎹 MIDI Controller (USB)", url: github+"/Midi_Arduino" ,description: "Projeto de um controlador MIDI baseado em Arduino.", nmmd:"path_readme"},
+        { hook: "DevOps", path: hookfigma.hook6, label: "🐳 Amb. Dev Docker Genérico", url: github+"/script_docker" ,description: "Configuração de ambiente de desenvolvimento utilizando Docker Compose.", nmmd:"path_readme"},
+        { hook: "Dev", path: hookfigma.hook7, label: "📦 PostgreSQL, JPA (em projetos Java)", url: github+"/dslist-rest" ,description: "Projeto Java Spring", nmmd:"path_readme"},
+        { hook: "Dev", path: hookfigma.hook8, label: "🎮 Jogo JS (JavaScript)", url: github+"/game_javascript" ,description: "Projeto de jogo baseado em JavaScript.", nmmd:"path_readme"},
+        { hook: "Dev", path: hookfigma.hook11, label: "📦 PostgreSQL, JPA (em projetos Java)", url: github+"/dslist-rest" ,description: "Projeto Java Spring", nmmd:"path_readme"},        
+        { hook: "Fund", path: hookfigma.hook9, label: "📦 APIs e Integrações (dslist-rest)", url: github+"/dslist-rest" ,description: "Projeto Java Spring", nmmd:"path_readme"},
         { hook: "Fund", path: hookfigma.hook10, label: "Flutter Mobile", url: github+"/apptast" ,description: "TechTaste - Aplicativo de Restaurantes", nmmd:"path_readme"},
-        { hook: "Fund", path: hookfigma.hook10, label: "Java (dslist-rest)", url: github+"/dslist-rest" ,description: "Projeto Java Spring", nmmd:"path_readme"},
-        { hook: "Fund", path:hookfigma.hook10, label: "Python (Amb. Dev Docker)", url: github+"/script_docker" ,description: "Extrutura base para aplicação python", nmmd:"path_readme"},
-        { hook: "Fund", path:hookfigma.hook12, label: "Reengenharia de Funções", url: github+"/appdla" ,description: "Desafio 21 Dias de Código Fonte TV", nmmd:"path_readme"},
-        { hook: "Fund", path:hookfigma.hook12, label: "Gerenciamento de Estudos", url: github+"/StudyFlow" ,description: "Seu Assistente de Estudos Tecnológicos", nmmd:"path_readme"},
-        { hook: "Skils", path: hookfigma.hook13, label: "PHP (Portfólio Geral)", url: "https://github.com/fabiuniz" ,description: "Portifolio", nmmd:"path_readme"},
+        { hook: "Fund", path: hookfigma.hook10, label: "📦 Java (dslist-rest)", url: github+"/dslist-rest" ,description: "Projeto Java Spring", nmmd:"path_readme"},
+        { hook: "Fund", path:hookfigma.hook10, label: "🐳 Python (Amb. Dev Docker)", url: github+"/script_docker" ,description: "Extrutura base para aplicação python", nmmd:"path_readme"},
+        { hook: "Fund", path:hookfigma.hook12, label: "📚 Reengenharia de Funções", url: github+"/appdla" ,description: "Desafio 21 Dias de Código Fonte TV", nmmd:"path_readme"},
+        { hook: "Fund", path:hookfigma.hook12, label: "🌊 Gerenciamento de Estudos", url: github+"/StudyFlow" ,description: "Seu Assistente de Estudos Tecnológicos", nmmd:"path_readme"},
+        { hook: "Skils", path: hookfigma.hook13, label: "💼 PHP (Portfólio Geral)", url: "https://github.com/fabiuniz" ,description: "Portifolio", nmmd:"path_readme"},
+        { hook: "Monolíto", path: hookfigma.hook14, label: "📦 Projeto DSList com API RESTful em Java Spring.", url: github+"/dslist-rest", description: "Projeto DSList com API RESTful, desenvolvido em Java Spring.", nmmd: "" },
+        { hook: "Dev", path: hookfigma.hook16, label: "📱 App Tast mobile (Android).", url: github+"/apptast", description: "Projeto ou curso da Alura relacionado a desenvolvimento mobile, provavelmente Android.", nmmd: "" },
     ];  
+
     function assignIdsAndLinksToSvgElements() {
         const svgObject = document.getElementById('mySvgObject');
         svgObject.addEventListener('load', function() {
@@ -138,7 +141,7 @@
                     font-size: 14px;
                     color: black;
                     font-family: 'Roboto Light', 'Roboto', sans-serif; 
-                    text-decoration: underline;
+                    /*text-decoration: underline;*/
                     white-space: nowrap;
                 }
                 .link-span:hover {
