--- a/tree.html
+++ b/tree.html
@@ -59,10 +59,8 @@
 <body>
     <object id="mySvgObject" data="arvore_projetos.svg" type="image/svg+xml"></object>
     <script>        
-        //path_M110056547603V559239H108647V547603H110056ZM1140455 ingles        
-        //path_M11306414149H112923C112915141449112914141411287914 ci/cd
+        //
         //path_M112268152466V153629H112127V152466H112268ZM1126671 infra iac
-        //path_M113064162168H112923C11291516212711291620921128791 Cloud compu
         //path_M112764171433C112757171376112729171331112681171299 SRE                        
         
     const hookfigma ={
@@ -82,7 +80,10 @@
         hook13 : "path_M11501664591C11494266401511466666356811418166325C1", //Skils   -->skils
         hook14 : "path_M203205165334H204887L2088411663H208978L21293216533", //Monolíto   -->Monolíto
         hook15 : "path_M345577370333V358696H352555V359946H346986V363878H3",// Seguranca --> fund
-        hook16 : "path_M203205177134H204887L2088411781H208978L21293217713" // Dev -->    Mobile
+        hook16 : "path_M203205177134H204887L2088411781H208978L21293217713", // Dev -->    Mobile
+        hook17 : "path_M110056547603V559239H108647V547603H110056ZM1140455", //Skils   -->ingles
+        hook18 : "path_M11286414149H112723C112715141449112714141411267914", //DevOps  --> ci/cd"
+        hook19 : "path_M112864162168H112723C11271516212711271620921126791" //DevOps  --> nuvem
     };
     const github = "https://github.com/fabiuniz";
     const linksDataFigma = [
