--- a/tree.html
+++ b/tree.html
@@ -107,7 +107,9 @@
         { hook: "Skils", path: hookfigma.hook13, label: "💼 PHP (Portfólio Geral)", url: "https://github.com/fabiuniz" ,description: "Portifolio", nmmd:"path_readme"},
         { hook: "Monolíto", path: hookfigma.hook14, label: "📦 Projeto gmcatalog com API RESTful em Java Spring.", url: github+"/gmcatalog-rest", description: "Projeto gmcatalog com API RESTful, desenvolvido em Java Spring.", nmmd: "" },
         { hook: "Dev", path: hookfigma.hook16, label: "📱 App Tast mobile (Android).", url: github+"/apptast", description: "Projeto ou curso da Alura relacionado a desenvolvimento mobile, provavelmente Android.", nmmd: "" },
-        { hook: "DadosIA", path: hookfigma.hook3, label: "🎯 Extraindo legenda do youTube", url: github+"/youtube-transcript", description: "Extraindo legenda do youTube usando pynthon", nmmd: "D:\\DataS1249GB\\Linguagens\\Python\\youtube-transcript\\README.md" },
+        { hook: "DadosIA", path: hookfigma.hook3, label: "🎯 Extraindo legenda do youTube", url: github+"/youtube-transcript", description: "Extraindo legenda do youTube usando pynthon", nmmd: "" },
+        { hook: "DevOps", path: hookfigma.hook18, label: "📚 Sistema de Gestão Escolar", url: github+"/gestaoedu", description: "A aplicação possui uma API backend construída com **FastAPI** e um frontend interativo desenvolvido com **React** e **Tailwind CSS**. O banco de dados é gerenciado por **SQLAlchemy** com SQLite, e a aplicação é containerizada utilizando **Docker**. Este projeto foi desenvolvido como parte da **Imersão DevOps da Alura**.", nmmd: "" },
+        { hook: "Monolíto", path: hookfigma.hook14, label: "📚 Sistema de Gestão Escolar", url: github+"/gestaoedu", description: "A aplicação possui uma API backend construída com **FastAPI** e um frontend interativo desenvolvido com **React** e **Tailwind CSS**. O banco de dados é gerenciado por **SQLAlchemy** com SQLite, e a aplicação é containerizada utilizando **Docker**. Este projeto foi desenvolvido como parte da **Imersão DevOps da Alura**.", nmmd: "" },
     ];  
 
     function assignIdsAndLinksToSvgElements() {
