--- a/tree.html
+++ b/tree.html
@@ -54,6 +54,38 @@
                 padding: 10px 0;
             }
         }
+        .base-button {
+            position: absolute; /* Já que ambos serão absolutos */
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            padding: 7px;
+            text-align: center;
+            outline: none;
+            text-decoration: none !important;
+            color: #ffffff !important;
+            width: 150px;
+            height: 15px;
+            border-radius: 16px;
+            font-family: "SF Pro Text", Helvetica, sans-serif;
+            left: 30px;
+            top: 30px; /* Posição específica do LinkedIn */
+        }
+
+        /* Estilos específicos para o LinkedIn */
+        .libuttonlinkedin {
+            left: 38px;
+            width: 135px;
+            background-color: #0A66C2; /* Cor do LinkedIn */
+        }
+
+        /* Estilos específicos para o GitHub */
+        .libuttongithub {
+            background-color: #333; /* Cor do GitHub */
+            top: calc(18px + 32px + 10px); /* 100px (top do linkedin) + 32px (height do linkedin) + 10px (espaço entre eles) */
+        }       
+
+        }
     </style>
 </head>
 <body>
@@ -95,21 +127,21 @@
         { hook: "IoT", path: hookfigma.hook4, label: "🎹 MIDI Controller (USB)", url: github+"/Midi_Arduino" ,description: "Projeto de um controlador MIDI baseado em Arduino.", nmmd:"path_readme"},
         { hook: "IoT", path: hookfigma.hook5, label: "🎹 MIDI Controller (USB)", url: github+"/Midi_Arduino" ,description: "Projeto de um controlador MIDI baseado em Arduino.", nmmd:"path_readme"},
         { hook: "DevOps", path: hookfigma.hook6, label: "🐳 Amb. Dev Docker Genérico", url: github+"/script_docker" ,description: "Configuração de ambiente de desenvolvimento utilizando Docker Compose.", nmmd:"path_readme"},
-        { hook: "Dev", path: hookfigma.hook7, label: "📦 PostgreSQL, JPA (em projetos Java)", url: github+"/gmcatalog-rest" ,description: "Projeto Java Spring", nmmd:"path_readme"},
         { hook: "Dev", path: hookfigma.hook8, label: "🎮 Jogo JS (JavaScript)", url: github+"/game_javascript" ,description: "Projeto de jogo baseado em JavaScript.", nmmd:"path_readme"},
-        { hook: "Dev", path: hookfigma.hook11, label: "📦 PostgreSQL, JPA (em projetos Java)", url: github+"/gmcatalog-rest" ,description: "Projeto Java Spring", nmmd:"path_readme"},        
-        { hook: "Fund", path: hookfigma.hook9, label: "📦 APIs e Integrações (gmcatalog-rest)", url: github+"/gmcatalog-rest" ,description: "Projeto Java Spring", nmmd:"path_readme"},
         { hook: "Fund", path: hookfigma.hook10, label: "Flutter Mobile", url: github+"/apptast" ,description: "TechTaste - Aplicativo de Restaurantes", nmmd:"path_readme"},
-        { hook: "Fund", path: hookfigma.hook10, label: "📦 Java (gmcatalog-rest)", url: github+"/gmcatalog-rest" ,description: "Projeto Java Spring", nmmd:"path_readme"},
         { hook: "Fund", path:hookfigma.hook10, label: "🐳 Python (Amb. Dev Docker)", url: github+"/script_docker" ,description: "Extrutura base para aplicação python", nmmd:"path_readme"},
         { hook: "Fund", path:hookfigma.hook12, label: "📚 Reengenharia de Funções", url: github+"/appdla" ,description: "Desafio 21 Dias de Código Fonte TV", nmmd:"path_readme"},
         { hook: "Fund", path:hookfigma.hook12, label: "🌊 Gerenciamento de Estudos", url: github+"/StudyFlow" ,description: "Seu Assistente de Estudos Tecnológicos", nmmd:"path_readme"},
         { hook: "Skils", path: hookfigma.hook13, label: "💼 PHP (Portfólio Geral)", url: "https://github.com/fabiuniz" ,description: "Portifolio", nmmd:"path_readme"},
-        { hook: "Monolíto", path: hookfigma.hook14, label: "📦 Projeto gmcatalog com API RESTful em Java Spring.", url: github+"/gmcatalog-rest", description: "Projeto gmcatalog com API RESTful, desenvolvido em Java Spring.", nmmd: "" },
         { hook: "Dev", path: hookfigma.hook16, label: "📱 App Tast mobile (Android).", url: github+"/apptast", description: "Projeto ou curso da Alura relacionado a desenvolvimento mobile, provavelmente Android.", nmmd: "" },
         { hook: "DadosIA", path: hookfigma.hook3, label: "🎯 Extraindo legenda do youTube", url: github+"/youtube-transcript", description: "Extraindo legenda do youTube usando pynthon", nmmd: "" },
         { hook: "DevOps", path: hookfigma.hook18, label: "📚 Sistema de Gestão Escolar", url: github+"/gestaoedu", description: "A aplicação possui uma API backend construída com **FastAPI** e um frontend interativo desenvolvido com **React** e **Tailwind CSS**. O banco de dados é gerenciado por **SQLAlchemy** com SQLite, e a aplicação é containerizada utilizando **Docker**. Este projeto foi desenvolvido como parte da **Imersão DevOps da Alura**.", nmmd: "" },
-        { hook: "Monolíto", path: hookfigma.hook14, label: "📚 Sistema de Gestão Escolar", url: github+"/gestaoedu", description: "A aplicação possui uma API backend construída com **FastAPI** e um frontend interativo desenvolvido com **React** e **Tailwind CSS**. O banco de dados é gerenciado por **SQLAlchemy** com SQLite, e a aplicação é containerizada utilizando **Docker**. Este projeto foi desenvolvido como parte da **Imersão DevOps da Alura**.", nmmd: "" },
+        { hook: "Monolíto", path: hookfigma.hook14, label: "📚 Sistema de Gestão Escolar", url: github+"/gestaoedu", description: "A aplicação possui uma API backend construída com **FastAPI** e um frontend interativo desenvolvido com **React** e **Tailwind CSS**. O banco de dados é gerenciado por **SQLAlchemy** com SQLite, e a aplicação é containerizada utilizando **Docker**. Este projeto foi desenvolvido como parte da **Imersão DevOps da Alura**.", nmmd: "" },        
+        { hook: "Dev", path: hookfigma.hook7, label: "📦 PostgreSQL, JPA (em projetos Java)", url: github+"/gmcatalog-rest" ,description: "Projeto Java Spring", nmmd:"path_readme"},
+        { hook: "Fund", path: hookfigma.hook9, label: "📦 APIs e Integrações (gmcatalog-rest)", url: github+"/gmcatalog-rest" ,description: "Projeto Java Spring", nmmd:"path_readme"},
+        { hook: "Fund", path: hookfigma.hook10, label: "📦 Java (gmcatalog-rest)", url: github+"/gmcatalog-rest" ,description: "Projeto Java Spring", nmmd:"path_readme"},
+        { hook: "Dev", path: hookfigma.hook11, label: "📦 PostgreSQL, JPA (em projetos Java)", url: github+"/gmcatalog-rest" ,description: "Projeto Java Spring", nmmd:"path_readme"},        
+        { hook: "Monolíto", path: hookfigma.hook14, label: "📦 PostgreSQL, JPA e API RESTful em Java Spring.", url: github+"/gmcatalog-rest", description: "Projeto gmcatalog com API RESTful, desenvolvido em Java Spring.", nmmd: "" },
     ];  
 
     function assignIdsAndLinksToSvgElements() {
@@ -290,5 +322,9 @@
 
     document.addEventListener('DOMContentLoaded', () => assignIdsAndLinksToSvgElements());
 </script>
+<a class="base-button libuttonlinkedin" href="https://www.linkedin.com/comm/mynetwork/discovery-see-all?usecase=PEOPLE_FOLLOWS&followMember=fabiano-rocha-de-almeida-dev" target="_blank">Follow on LinkedIn</a>
+<a class="base-button libuttongithub" href="https://github.com/fabiuniz" target="_blank">
+    <img alt="GitHub followers" src="https://img.shields.io/github/followers/fabiuniz?style=social">
+</a>
 </body>
 </html>
