--- a/tree.html
+++ b/tree.html
@@ -10,10 +10,14 @@
     <meta name="description" content="Portfólio interativo de Fabiano Rocha, desenvolvedor PHP/Java/Python (Flask, FastAPI), especialista em CI/CD (GitHub Actions, Docker, Google Cloud Run) e ciência de dados (Machine Learning, Análise de Dados). Veja projetos de IoT, Backend, Frontend e DevOps.">
     <meta name="keywords" content="portfólio, desenvolvedor, python, flask, fastapi, ciência de dados, machine learning, análise de dados, devops, ci/cd, github actions, docker, google cloud run, iot, backend, frontend, java, sql, react, flutter, automação, projetos de programação, fabiano rocha, desenvolvedor web, engenharia de software">
     <meta name="author" content="Fabiano Rocha">
-    <meta name="robots" content="index, follow"> <link rel="canonical" href="https://fabiuniz.github.io/fabiuniz/tree.html"> <meta property="og:title" content="Fabiano Rocha - Portfólio de Desenvolvedor & Cientista de Dados">
+    <meta name="robots" content="index, follow"> 
+    <link rel="canonical" href="https://fabiuniz.github.io/fabiuniz/tree.html"> 
+    <meta property="og:title" content="Fabiano Rocha - Portfólio de Desenvolvedor & Cientista de Dados">
     <meta property="og:description" content="Portfólio interativo de Fabiano Rocha: projetos em Python (Flask, FastAPI), CI/CD, Machine Learning, Análise de Dados, IoT e mais.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://fabiuniz.github.io/fabiuniz/tree.html"> <meta property="og:image" content="https://fabiuniz.github.io/fabiuniz/arvore_projetos.svg"> <meta property="og:locale" content="pt_BR">
+    <meta property="og:url" content="https://fabiuniz.github.io/fabiuniz/tree.html"> 
+    <meta property="og:image" content="https://fabiuniz.github.io/fabiuniz/arvore_projetos.svg"> 
+    <meta property="og:locale" content="pt_BR">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
